azure/ResourceManager/AzureRM.Compute/v1.3.4/AzureRM.Compute.md
---
Module Name: AzureRM.Compute
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.8.0
Locale: en-US
updated_at: 10/18/2016 9:38 PM
ms.date: 10/18/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Compute/v1.3.4/AzureRM.Compute.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/23cdb8705d4ab9807c0e21b238f3b134a7d49c7d/azureps-cmdlets-docs/ResourceManager/AzureRM.Compute/v1.3.4/AzureRM.Compute.md
ms.topic: conceptual
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# AzureRM.Compute Module
## Description
This topic displays the help topics for the Azure Compute Cmdlets.

## AzureRM.Compute Cmdlets
### [Add-AzureRmContainerServiceAgentPoolProfile](.\Add-AzureRmContainerServiceAgentPoolProfile.md)
Adds a container service agent pool profile.


### [Add-AzureRMVhd](.\Add-AzureRMVhd.md)
Uploads a virtual hard disk from an on-premises virtual machine to a blob in a cloud storage account in azure_2.


### [Add-AzureRmVMAdditionalUnattendContent](.\Add-AzureRmVMAdditionalUnattendContent.md)
Adds information to the unattended Windows Setup answer file.


### [Add-AzureRmVMDataDisk](.\Add-AzureRmVMDataDisk.md)
Adds a data disk to a virtual machine.


### [Add-AzureRmVMNetworkInterface](.\Add-AzureRmVMNetworkInterface.md)
Adds a network interface to a virtual machine.


### [Add-AzureRmVMSecret](.\Add-AzureRmVMSecret.md)
Adds a secret to a virtual machine.


### [Add-AzureRmVmssAdditionalUnattendContent](.\Add-AzureRmVmssAdditionalUnattendContent.md)
Adds information to the unattended Windows Setup answer file.

### [Add-AzureRmVmssExtension](.\Add-AzureRmVmssExtension.md)
Adds an extension to the VMSS.


### [Add-AzureRmVMSshPublicKey](.\Add-AzureRmVMSshPublicKey.md)
Adds the public keys for SSH for a virtual machine.


### [Add-AzureRmVmssNetworkInterfaceConfiguration](.\Add-AzureRmVmssNetworkInterfaceConfiguration.md)
Adds a network interface configuration to the VMSS.


### [Add-AzureRmVmssSecret](.\Add-AzureRmVmssSecret.md)
Adds a secret to a VMSS.


### [Add-AzureRmVmssSshPublicKey](.\Add-AzureRmVmssSshPublicKey.md)
Adds SSH public keys to the VMSS.


### [Add-AzureRmVmssWinRMListener](.\Add-AzureRmVmssWinRMListener.md)
Adds a WinRM listener to the VMSS.


### [Disable-AzureRmVMDiskEncryption](.\Disable-AzureRmVMDiskEncryption.md)
Disables encryption on an IaaS virtual machine.


### [Get-AzureRmAvailabilitySet](.\Get-AzureRmAvailabilitySet.md)
Gets azure_2 availability sets in a resource group.


### [Get-AzureRmContainerService](.\Get-AzureRmContainerService.md)
Gets a container service.


### [Get-AzureRmRemoteDesktopFile](.\Get-AzureRmRemoteDesktopFile.md)
Gets an .rdp file.


### [Get-AzureRmVMAccessExtension](.\Get-AzureRmVMAccessExtension.md)
Gets information about the VMAccess extension.


### [Get-AzureRmVMADDomainExtension](.\Get-AzureRmVMADDomainExtension.md)
Gets information about an AD domain extension.


### [Get-AzureRmVMAEMExtension](.\Get-AzureRmVMAEMExtension.md)
Gets information about the AEM extension.


### [Get-AzureRmVMBootDiagnosticsData](.\Get-AzureRmVMBootDiagnosticsData.md)
Gets boot diagnostics data for a virtual machine.

### [Get-AzureRmVMCustomScriptExtension](.\Get-AzureRmVMCustomScriptExtension.md)
Gets information about a custom script extension.


### [Get-AzureRMVMDiagnosticsExtension](.\Get-AzureRMVMDiagnosticsExtension.md)
Gets the settings of the Diagnostics extension on a virtual machine.


### [Get-AzureRmVMDiskEncryptionStatus](.\Get-AzureRmVMDiskEncryptionStatus.md)
Gets the encryption status of the virtual machine.


### [Get-AzureRmVMDscExtensionStatus](.\Get-AzureRmVMDscExtensionStatus.md)
Gets the status of the DSC extension handler for a virtual machine.


### [Get-AzureRmVMDscExtension](.\Get-AzureRmVMDscExtension.md)
Gets the settings of the DSC extension on a particular virtual machine.


### [Get-AzureRmVMExtensionImageType](.\Get-AzureRmVMExtensionImageType.md)
Gets the type of an azure_2 extension.


### [Get-AzureRmVMExtensionImage](.\Get-AzureRmVMExtensionImage.md)
Gets all versions for an azure_2 extension.


### [Get-AzureRmVMExtension](.\Get-AzureRmVMExtension.md)
Gets properties of Virtual Machine Extensions installed on a virtual machine.


### [Get-AzureRmVMImageOffer](.\Get-AzureRmVMImageOffer.md)
Gets VMImage offer types.


### [Get-AzureRmVMImagePublisher](.\Get-AzureRmVMImagePublisher.md)
Gets the VMImage publishers.


### [Get-AzureRmVMImageSku](.\Get-AzureRmVMImageSku.md)
Gets VMImage SKUs.


### [Get-AzureRmVMImage](.\Get-AzureRmVMImage.md)
Gets all the versions of a VMImage.


### [Get-AzureRmVMSize](.\Get-AzureRmVMSize.md)
Gets available virtual machine sizes.


### [Get-AzureRMVMSqlServerExtension](.\Get-AzureRMVMSqlServerExtension.md)
Gets the settings for a ssNoVersion extension on a virtual machine.


### [Get-AzureRmVmssSku](.\Get-AzureRmVmssSku.md)
Gets the available SKUs for the VMSS.


### [Get-AzureRmVmssVM](.\Get-AzureRmVmssVM.md)
Gets the properties of a VMSS virtual machine.


### [Get-AzureRmVmss](.\Get-AzureRmVmss.md)
Gets the properties of a VMSS.


### [Get-AzureRmVMUsage](.\Get-AzureRmVMUsage.md)
Gets the virtual machine core count usage for a location.


### [Get-AzureRmVM](.\Get-AzureRmVM.md)
Gets the properties of a virtual machine.


### [New-AzureRmAvailabilitySet](.\New-AzureRmAvailabilitySet.md)
Creates an azure_2 availability set.


### [New-AzureRmContainerServiceConfig](.\New-AzureRmContainerServiceConfig.md)
Creates a local configuration object for a container service.


### [New-AzureRmContainerService](.\New-AzureRmContainerService.md)
Creates a container service.


### [New-AzureRmVMConfig](.\New-AzureRmVMConfig.md)
Creates a configurable virtual machine object.


### [New-AzureRmVmssConfig](.\New-AzureRmVmssConfig.md)
Creates a VMSS configuration object.


### [New-AzureRmVmssIpConfig](.\New-AzureRmVmssIpConfig.md)
Creates an IP configuration for a network interface of a VMSS.


### [New-AzureRmVmssVaultCertificateConfig](.\New-AzureRmVmssVaultCertificateConfig.md)
Creates a Key Vault certificate configuration.


### [New-AzureRmVmss](.\New-AzureRmVmss.md)
Creates a VMSS.


### [New-AzureRmVM](.\New-AzureRmVM.md)
Creates a virtual machine.


### [New-AzureVMSqlServerAutoBackupConfig](.\New-AzureVMSqlServerAutoBackupConfig.md)
Creates a configuration object for ssNoVersion automatic backup.


### [New-AzureVMSqlServerAutoPatchingConfig](.\New-AzureVMSqlServerAutoPatchingConfig.md)
Creates a configuration object for automatic patching on a virtual machine.


### [New-AzureVMSqlServerKeyVaultCredentialConfig](.\New-AzureVMSqlServerKeyVaultCredentialConfig.md)



### [Publish-AzureRmVMDscConfiguration](.\Publish-AzureRmVMDscConfiguration.md)
Uploads a DSC script to azure_2 blob storage.


### [Remove-AzureRmAvailabilitySet](.\Remove-AzureRmAvailabilitySet.md)
Removes an availability set from azure_2.


### [Remove-AzureRmContainerServiceAgentPoolProfile](.\Remove-AzureRmContainerServiceAgentPoolProfile.md)
Removes an agent pool profile from a container service.


### [Remove-AzureRmContainerService](.\Remove-AzureRmContainerService.md)
Removes a container service.


### [Remove-AzureRmVMAccessExtension](.\Remove-AzureRmVMAccessExtension.md)
Removes the VMAccess extension from a virtual machine.


### [Remove-AzureRmVMAEMExtension](.\Remove-AzureRmVMAEMExtension.md)
Removes the AEM extension from a virtual machine.


### [Remove-AzureRmVMBackup](.\Remove-AzureRmVMBackup.md)


### [Remove-AzureRmVMCustomScriptExtension](.\Remove-AzureRmVMCustomScriptExtension.md)
Removes a custom script extension from a virtual machine.


### [Remove-AzureRmVMDataDisk](.\Remove-AzureRmVMDataDisk.md)
Removes a data disk from a virtual machine.


### [Remove-AzureRmVMDiagnosticsExtension](.\Remove-AzureRmVMDiagnosticsExtension.md)
Removes the Diagnostics extension from a virtual machine.


### [Remove-AzureRmVMDiskEncryptionExtension](.\Remove-AzureRmVMDiskEncryptionExtension.md)
Removes the disk encryption extension from a virtual machine.


### [Remove-AzureRmVMDscExtension](.\Remove-AzureRmVMDscExtension.md)
Removes a DSC extension handler from a virtual machine in a resource group.


### [Remove-AzureRmVMExtension](.\Remove-AzureRmVMExtension.md)
Removes an extension from a virtual machine.


### [Remove-AzureRmVMNetworkInterface](.\Remove-AzureRmVMNetworkInterface.md)
Removes a network interface from a virtual machine.


### [Remove-AzureRMVMSqlServerExtension](.\Remove-AzureRMVMSqlServerExtension.md)
Removes a ssNoVersion extension from a virtual machine.

### [Remove-AzureRmVmssExtension](.\Remove-AzureRmVmssExtension.md)
Removes an extension from the VMSS.


### [Remove-AzureRmVmssNetworkInterfaceConfiguration](.\Remove-AzureRmVmssNetworkInterfaceConfiguration.md)
Removes a network interface configuration from a VMSS.


### [Remove-AzureRmVmss](.\Remove-AzureRmVmss.md)
Removes the VMSS or a virtual machine that is within the VMSS.


### [Remove-AzureRmVM](.\Remove-AzureRmVM.md)
Removes a virtual machine from azure_2.


### [Restart-AzureRmVmss](.\Restart-AzureRmVmss.md)
Restarts the VMSS or a virtual machine within the VMSS.


### [Restart-AzureRmVM](.\Restart-AzureRmVM.md)
Restarts an azure_2 virtual machine.


### [Save-AzureRmVhd](.\Save-AzureRmVhd.md)
Saves downloaded .vhd images locally.


### [Save-AzureRmVMImage](.\Save-AzureRmVMImage.md)
Saves a virtual machine as a VMImage.


### [Set-AzureRmVMAccessExtension](.\Set-AzureRmVMAccessExtension.md)
Adds the VMAccess extension to a virtual machine.


### [Set-AzureRmVMADDomainExtension](.\Set-AzureRmVMADDomainExtension.md)
Adds an AD domain extension to a virtual machine.


### [Set-AzureRmVMAEMExtension](.\Set-AzureRmVMAEMExtension.md)
Enables support for monitoring for SAP systems.


### [Set-AzureRmVMBackupExtension](.\Set-AzureRmVMBackupExtension.md)



### [Set-AzureRmVMBginfoExtension](.\Set-AzureRmVMBginfoExtension.md)
Adds the BGInfo extension to a virtual machine.


### [Set-AzureRmVMBootDiagnostics](.\Set-AzureRmVMBootDiagnostics.md)
Modifies boot diagnostics properties of a virtual machine.

### [Set-AzureRmVMCustomScriptExtension](.\Set-AzureRmVMCustomScriptExtension.md)
Adds a custom script extension to a virtual machine.


### [Set-AzureRMVMDataDisk](.\Set-AzureRMVMDataDisk.md)
Modifies properties of a virtual machine data disk.


### [Set-AzureRMVMDiagnosticsExtension](.\Set-AzureRMVMDiagnosticsExtension.md)
Configures the azure_2 diagnostics extension on a virtual machine.


### [Set-AzureRmVMDiskEncryptionExtension](.\Set-AzureRmVMDiskEncryptionExtension.md)
Enables encryption on a running IaaS virtual machine in azure_2.


### [Set-AzureRmVMDscExtension](.\Set-AzureRmVMDscExtension.md)
Configures the dsc_2 extension on a virtual machine.


### [Set-AzureRmVMExtension](.\Set-AzureRmVMExtension.md)
Updates extension properties or adds an extension to a virtual machine.


### [Set-AzureRmVMOperatingSystem](.\Set-AzureRmVMOperatingSystem.md)
Sets operating system properties for a virtual machine.


### [Set-AzureRmVMOSDisk](.\Set-AzureRmVMOSDisk.md)
Sets the operating system disk properties on a virtual machine.


### [Set-AzureRmVMPlan](.\Set-AzureRmVMPlan.md)
Sets the Marketplace plan information on a virtual machine.


### [Set-AzureRmVMSourceImage](.\Set-AzureRmVMSourceImage.md)
Specifies the platform image for a virtual machine.


### [Set-AzureRMVMSqlServerExtension](.\Set-AzureRMVMSqlServerExtension.md)
Sets the azure_2 SQL Server extension on a virtual machine.


### [Set-AzureRmVmssOsProfile](.\Set-AzureRmVmssOsProfile.md)
Sets the VMSS operating system profile properties.


### [Set-AzureRmVmssStorageProfile](.\Set-AzureRmVmssStorageProfile.md)
Sets the storage profile properties for the VMSS.


### [Set-AzureRmVmssVM](.\Set-AzureRmVmssVM.md)
Modifies the state of a VMSS instance.


### [Set-AzureRmVmss](.\Set-AzureRmVmss.md)
Sets specific actions on a specified VMSS.


### [Set-AzureRmVM](.\Set-AzureRmVM.md)
Marks a virtual machine as generalized.


### [Start-AzureRmVmss](.\Start-AzureRmVmss.md)
Starts the VMSS or a set of virtual machines within the VMSS.


### [Start-AzureRmVM](.\Start-AzureRmVM.md)
Starts an azure_2 virtual machine.


### [Stop-AzureRmVmss](.\Stop-AzureRmVmss.md)
Stops the VMSS or a set of virtual machines within the VMSS.


### [Stop-AzureRmVM](.\Stop-AzureRmVM.md)
Stops an azure_2 virtual machine.


### [Test-AzureRmVMAEMExtension](.\Test-AzureRmVMAEMExtension.md)
Checks the configuration of the AEM extension.


### [Update-AzureRmContainerService](.\Update-AzureRmContainerService.md)
Updates the state of a container service.


### [Update-AzureRmVmssInstance](.\Update-AzureRmVmssInstance.md)
Starts a manual upgrade of the VMSS instance.


### [Update-AzureRmVmss](.\Update-AzureRmVmss.md)
Updates the state of a VMSS.


### [Update-AzureRmVM](.\Update-AzureRmVM.md)
Updates the state of an azure_2 virtual machine.



